# ikigai

./: .gitignore  Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: ikigai_error.rs  lib.rs
crates/core/src/date/chinese/: animal.rs  constellation.rs  gan.rs  gan_zhi.rs  lunar.rs  mod.rs  solar.rs  solarterm.rs  utils.rs  zhi.rs
crates/ikigai/: Cargo.toml
